WIP: tackling flex & alignment issues

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,14 @@
 :root {
+  /* bg/text settings for dark/light options */
   --clr-bg-dark: #1f2937; /* gray-800 */
   --clr-bg-light: #fafafa; /* zinc-50 */
 
   --clr-text-dark: #1f2937; /* gray-200 */
   --clr-text-light: #fafafa; /* zinc-50 */
 
-  min-height: 100vh;
+  min-height: 100%;
+  min-width: 100%;
+
 }
 
 .dark {
@@ -78,19 +81,14 @@
   color: white;
 } */
 
-/* .section-content { */
-  /* display: flex; */
-  /* flex-wrap: wrap;
+.section-content {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   justify-content: center;
-  align-items: center; */
-  
-  /* top: 50%; */
-  /* left: 50%; */
-  /* position: auto; */
-  /* padding: 20px;
-  width: 100%;
-  justify-content: space-between; */
-/* } */
+  align-items: center;
+  flex: 1 0 calc(33.33% - 20px);
+}
 
 .nav-item > .active {
   border-bottom: 1px solid #333;
@@ -182,12 +180,23 @@ border-radius: 50%;
 
 /* skills */
 
+/* the overall skill container */
+
 /* #343434; */
+/* the individual element (python, jscript, etc */
 .skill-card {
+  /* display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex: 1 0 calc(33.33% - 20px); */
   width: 100px; 
   padding: 20px; 
   background-color: #836666;
   border-radius: 8px;
+  border: 1px solid #ccc;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   margin-bottom: 20px; 
+ 
+  /* justify-content: space-between; */
 }
+
